Added new AuthController file

--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -21,5 +21,8 @@
         </ol>
 
         <p>{{obj.item1}}</p>
+
+
+        <img src="{{ assetsUrl("images/pyramid.png") }}">
     </div>
 @endsection
