Added database connectiion for register.

--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -8,8 +8,11 @@
     @!section("style-section")
 </head>
 <body>
-    @!section('content')
-
+    @!section('nav-bar')
+    <div>
+        @!section('content')
+    </div>
+    @!section('footer')
     {{ script("js/index") }}
 </body>
 </html>
