--- a/resources/views/main.edge
+++ b/resources/views/main.edge
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/main-css.css">
 </head>
 <body>
-    <div class="container purple">
-        <div class="topbar">
+    <div class="container">
+        <div class="navbar purple">
             <div class="logo">
                 <img src="images/logo.png">
             </div>
@@ -17,32 +17,37 @@
                     <input type="text" name="search">
                     <img src="images/search-icon.png">
                 </div>
+                <div class="icon-navbar">
+                    <img src="images/account.png">
+                    <img src="images/cart.png" style="width: 20px">
+                    <img src="images/logout.png">
+                </div>
             </div>
         </div>
-        <div class="navbar">
-            <div class="all-navbar-text">
-                <div class="navbar-text">
-                    PROFILE
+        <div class="sidebar">
+            <div class="all-sidebar-text">
+                <div class="sidebar-text">
+                    HOME
                 </div>
-                <div class="navbar-text">
-                    HELP
+                <div class="sidebar-text">
+                    SHOP
                 </div>
-                <div class="navbar-text">
-                    MY PORDUCTS
+                <div class="sidebar-text">
+                    MY PURCHASE
                 </div>
-                <div class="navbar-text">
-                    MY SHOPPING
+                <div class="sidebar-text">
+                    MY PRODUCTS
                 </div>
-                <div class="navbar-text">
-                    CONTACT US
+                <div class="sidebar-text">
+                    ABOUT US
                 </div>
-                <div class="navbar-text">
-                    LOG OUT
+                <div class="sidebar-text">
+                    HELP CENTRE
                 </div>
             </div>
         </div>
         <div class="categories">
-            <img src="images/logo.png">
+            <img src="images/firstpic.jpg">
         </div>
     </div>
 </body>
