--- a/public/css/main-css.css
+++ b/public/css/main-css.css
@@ -9,23 +9,23 @@ html,body {
 }
 .container {
     height: 100%;
+    background-color: white;
 }
-.topbar {
+.navbar {
     width: 100%;
     height: 70px;
-    background-color: white;
     position: fixed;
     box-shadow: 0px -1px 7px rgb(82, 82, 82);
     z-index: 999;
 }
-.navbar {
+.sidebar {
     width: 300px;
     background-color: white;
     height: 100vh;
     position: fixed;
     z-index: 888;
 }
-.navbar-text {
+.sidebar-text {
     color: #767676;
     font: 15px Arial, sans-serif;
     width: 200px;
@@ -34,7 +34,7 @@ html,body {
     padding-left: 10px;
     border-bottom: #A5A5A5 solid 1px;
 }
-.all-navbar-text {
+.all-sidebar-text {
     display: flex;
     flex-direction: column;
     text-align: left;
@@ -66,16 +66,30 @@ html,body {
     margin-left: 100px;
 }
 .search {
-    border: rebeccapurple solid;
     width: 430px;
-    margin-right: 100px;
-    border: solid #A5A5A5 1px;
+    margin-right: 30px;
+    border: solid #A5A5A5 1px;    
+    background-color: white;
 }
 .search img {
     width: 10px;
 }
 .categories {
-    border: red solid;
+    /* border: red solid; */
     width: 100%;
     height: 100%;
+}
+.icon-navbar {
+    width: 100px;
+    margin-right: 10px;
+}
+.icon-navbar img {
+    width: 14px;
+    padding-right: 10px;
+}
+.categories img {
+    width: 100%;
+}
+.categories {
+    width: 100%;
 }
