--- a/resources/views/main.edge
+++ b/resources/views/main.edge
@@ -1,54 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>poprent</title>
-    <link rel="stylesheet" href="css/main-css.css">
-</head>
-<body>
-    <div class="container">
-        <div class="navbar purple">
-            <div class="logo">
-                <img src="images/logo.png">
-            </div>
-            <div class="all-search">
-                <div class="search">
-                    <input type="text" name="search">
-                    <img src="images/search-icon.png">
-                </div>
-                <div class="icon-navbar">
-                    <img src="images/account.png">
-                    <img src="images/cart.png" style="width: 20px">
-                    <img src="images/logout.png">
-                </div>
-            </div>
-        </div>
-        <div class="sidebar">
-            <div class="all-sidebar-text">
-                <div class="sidebar-text">
-                    HOME
-                </div>
-                <div class="sidebar-text">
-                    SHOP
-                </div>
-                <div class="sidebar-text">
-                    MY PURCHASE
-                </div>
-                <div class="sidebar-text">
-                    MY PRODUCTS
-                </div>
-                <div class="sidebar-text">
-                    ABOUT US
-                </div>
-                <div class="sidebar-text">
-                    HELP CENTRE
-                </div>
-            </div>
-        </div>
-        <div class="categories">
-            <img src="images/firstpic.jpg">
-        </div>
-    </div>
-</body>
-</html>
+@layout('mainlayout')
+@section('css')
+{{style("css/home")}}
+@endsection
+@section('content')    
+<img src="images/firstpic.jpg">
+<div class="color">
+    <div class="yellow"></div>
+    <div class="yellow2"></div>
+</div>
+@endsection
