Commented out facebook login api for later use.

--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -8,7 +8,7 @@
     @!section("style-section")
 
     
-    <script>
+    {{--  <script>
     window.fbAsyncInit = function() {
         FB.init({
         appId      : '876182436203640',
@@ -28,11 +28,11 @@
         js.src = "https://connect.facebook.net/en_US/sdk.js";
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
-    </script>
+    </script>  --}}
 </head>
 <body>
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0&appId=876182436203640&autoLogAppEvents=1" nonce="JEi5N58C"></script>
+    {{--  <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0&appId=876182436203640&autoLogAppEvents=1" nonce="JEi5N58C"></script>  --}}
     @!section('nav-bar')
     <div>
         @!section('content')
