--- a/resources/views/main.edge
+++ b/resources/views/main.edge
@@ -8,4 +8,13 @@
     <div class="yellow"></div>
     <div class="yellow2"></div>
 </div>
+<div class="sub-categories">
+    <div class="sub-cate-all-img">
+        <img class="sub-cate-img1" src="images/categories-accessories.jpg">
+        <img class="sub-cate-img2" src="images/categories-case.jpg">
+        <img class="sub-cate-img3" src="images/categories-makeup.jpg">
+        <img class="sub-cate-img4" src="images/categories-pen.jpg">
+        <img class="sub-cate-img5" src="images/categories-toy.jpg">
+    </div>
+</div>
 @endsection
