--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,9 +2,8 @@
 .color {
     display: grid;
     grid-template-columns: 50% 50%;
-    height: 300px;
+    height: 500px;
     width: 100%;
-    margin:0;
 }
 .yellow {
     background-color: #F1D28C;
@@ -13,4 +12,38 @@
 .yellow2 {
     background-color: #DDBD77;
     width: 100%;
+}
+.sub-categories {
+    width: 100%;
+}
+.sub-cate-all-img {
+    display: grid;
+    grid-column-gap: 100px;
+    width: 80%;
+    margin: 0 100px;
+}
+.sub-cate-img1 {
+    grid-column: 1;
+    border-radius: 50%;
+    margin: 10px;
+}
+.sub-cate-img2 {
+    grid-column: 2;
+    border-radius: 50%;
+    margin: 10px;
+}
+.sub-cate-img3 {
+    grid-column: 3;
+    border-radius: 50%;
+    margin: 10px;
+}
+.sub-cate-img4 {
+    grid-column: 4;
+    border-radius: 50%;
+    margin: 10px;
+}
+.sub-cate-img5 {
+    grid-column: 5;
+    border-radius: 50%;
+    margin: 10px;
 }
