--- a/public/css/main-css.css
+++ b/public/css/main-css.css
@@ -4,8 +4,9 @@ html,body {
     margin:0;
     padding:0;
 }
-.purple {
-    background-color: #BA9DBF;
+.white {
+    background-color: #ffffff;
+    box-shadow: 0px -1px 10px rgba(128, 128, 128,0.6);
 }
 .container {
     height: 100%;
@@ -13,47 +14,27 @@ html,body {
 }
 .navbar {
     width: 100%;
-    height: 70px;
+    height: 100px;
     position: fixed;
-    box-shadow: 0px -1px 7px rgb(82, 82, 82);
     z-index: 999;
 }
-.sidebar {
-    width: 300px;
-    background-color: white;
-    height: 100vh;
-    position: fixed;
-    z-index: 888;
-    grid-column: 1;
-}
-.sidebar-text {
-    color: #767676;
-    font: 15px Arial, sans-serif;
-    width: 200px;
-    padding-top: 2rem;
-    padding-bottom: 1rem;
-    padding-left: 10px;
-    border-bottom: #A5A5A5 solid 1px;
-}
-.all-sidebar-text {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    align-items: center;
-    justify-content: center;
-    height: 100% ;
-} 
 .search input{
     width: 400px;
     height: 20px;
     border: none;
 }
-.all-search {
+.all-nav {
     display: flex;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    color: #9B3303;
+    font-family: Helvetica Neue;
+    font-weight: bold;
+}
+.all-nav p {
+    margin-right: 30px;
 }
 .logo img{
     height: 40px;
@@ -64,24 +45,15 @@ html,body {
     height: 100%;
     display: flex;
     align-items: center;
-    margin-left: 100px;
-}
-.search {
-    width: 430px;
-    margin-right: 30px;
-    border: solid #A5A5A5 1px;    
-    background-color: white;
-}
-.search img {
-    width: 10px;
+    margin-left: 50px;
 }
 .categories {
     width: 100%;
     height: 100%;
 }
 .icon-navbar {
-    width: 100px;
-    margin-right: 10px;
+    width: 150px;
+    margin-right: 20px;
 }
 .icon-navbar img {
     width: 14px;
@@ -89,14 +61,13 @@ html,body {
 }
 .categories img {
     width: 100%;
-    /* margin-left: 300px; */
 }
 .categories {
-    width: 1140px;
+    width: 100%;
     grid-column: 2;
 }
 .bodycontainer {
     display: grid;
     width: 100vw;
-    grid-template-columns: 300px 1fr;
+    grid-template-columns: 0 1fr;
 }
