--- a/resources/views/mainlayout.edge
+++ b/resources/views/mainlayout.edge
@@ -9,45 +9,24 @@
 </head>
 <body>
     <div class="container">
-        <div class="navbar purple">
+        <div class="navbar">
             <div class="logo">
-                <img src="images/logo.png">
+                <img src="images/logo.svg">
             </div>
-            <div class="all-search">
-                <div class="search">
-                    <input type="text" name="search">
-                    <img src="images/search-icon.png">
-                </div>
+            <div class="all-nav">
+                <p>HOME</p>
+                <p>PURCHASE</p>
+                <p>PRODUCTS</p>
+                <p>ABOUT US</p>
                 <div class="icon-navbar">
-                    <img src="images/account.png">
-                    <img src="images/cart.png" style="width: 20px">
-                    <img src="images/logout.png">
+                    <img src="images/search-bar.svg">
+                    <img src="images/account.svg">
+                    <img src="images/shopping-cart.svg" style="width: 20px">
+                    <img src="images/logout.svg">
                 </div>
             </div>
         </div>
         <div class="bodycontainer">
-            <div class="sidebar">
-                <div class="all-sidebar-text">
-                    <div class="sidebar-text">
-                        HOME
-                    </div>
-                    <div class="sidebar-text">
-                        SHOP
-                    </div>
-                    <div class="sidebar-text">
-                        MY PURCHASE
-                    </div>
-                    <div class="sidebar-text">
-                        MY PRODUCTS
-                    </div>
-                    <div class="sidebar-text">
-                        ABOUT US
-                    </div>
-                    <div class="sidebar-text">
-                        HELP CENTRE
-                    </div>
-                </div>
-            </div>
             <div class="categories">
                 @!section('content')
             </div>
