--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -8,24 +8,23 @@
 
     <div class="contain pink">
         <form method="POST" action="{{route("/login")}}">
-            {{csrfField()}}
+            {{ csrfField() }}
             <label for="username">username</label>
             <input type="text" name="username" id="username">
             <label for="password">password</label>
             <input type="password" name="password" id="password">
             <button type="submit">Submit</button>
         </form>
-    {{--  <img src="{{assetsUrl("images/pic5.jpg")}}">  --}}
+        <div 
+        class="fb-login-button"
+        data-size="large" 
+        data-button-type="continue_with" 
+        data-layout="default" 
+        data-auto-logout-link="false" 
+        data-use-continue-as="false" 
+        data-width="" 
+        onlogin="checkLoginState();"  
+        scope="public_profile,email"
+        ></div>
     </div>
-    <div 
-    class="fb-login-button"
-    data-size="large" 
-    data-button-type="continue_with" 
-    data-layout="default" 
-    data-auto-logout-link="false" 
-    data-use-continue-as="false" 
-    data-width="" 
-    onlogin="checkLoginState();"  
-    {{--  scope="public_profile,email"  --}}
-    ></div>
     @endsection
