--- a/resources/views/main.edge
+++ b/resources/views/main.edge
@@ -3,12 +3,19 @@
 {{style("css/home")}}
 @endsection
 @section('content')    
-<img src="images/firstpic.jpg">
+<div class="firstpic">
+    <div class="text-first">
+        <p class="first">You can found</p>
+        <p class="second">WHATEVER</p>
+        <p class="third">"YOU WANT"</p>
+    </div>
+</div>
 <div class="color">
     <div class="yellow"></div>
     <div class="yellow2"></div>
 </div>
 <div class="sub-categories">
+    <p>SHOP BY CATEGORIES</p>
     <div class="sub-cate-all-img">
         <img class="sub-cate-img1" src="images/categories-accessories.jpg">
         <img class="sub-cate-img2" src="images/categories-case.jpg">
@@ -16,5 +23,10 @@
         <img class="sub-cate-img4" src="images/categories-pen.jpg">
         <img class="sub-cate-img5" src="images/categories-toy.jpg">
     </div>
+</div>
+<div class="shop-now">
+    <button type="button">
+        GO SHOPPING NOW
+    </button>
 </div>
 @endsection
