--- a/resources/views/mainlayout.edge
+++ b/resources/views/mainlayout.edge
@@ -9,12 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <div class="navbar">
+        <div class="navbar white">
             <div class="logo">
                 <img src="images/logo.svg">
             </div>
             <div class="all-nav">
                 <p>HOME</p>
+                <p>SHOP</p>
                 <p>PURCHASE</p>
                 <p>PRODUCTS</p>
                 <p>ABOUT US</p>
@@ -26,11 +27,11 @@
                 </div>
             </div>
         </div>
-        <div class="bodycontainer">
-            <div class="categories">
-                @!section('content')
-            </div>
+        <div class="maincontent">
+            @!section('content')
         </div>
     </div>
 </body>
+<footer>
+</footer>
 </html>
