--- a/public/css/main-css.css
+++ b/public/css/main-css.css
@@ -1,5 +1,5 @@
 html,body {
-    height: 500vh;
+    height: 100vh;
     width: 100vw;
     margin:0;
     padding:0;
@@ -11,6 +11,7 @@ html,body {
 .container {
     height: 100%;
     background-color: white;
+    background-color: #FAF5E9;
 }
 .navbar {
     width: 100%;
@@ -47,7 +48,7 @@ html,body {
     align-items: center;
     margin-left: 50px;
 }
-.categories {
+.maincontent {
     width: 100%;
     height: 100%;
 }
@@ -59,15 +60,14 @@ html,body {
     width: 14px;
     padding-right: 10px;
 }
-.categories img {
+.maincontent img {
     width: 100%;
 }
-.categories {
+.maincontent {
     width: 100%;
     grid-column: 2;
 }
-.bodycontainer {
-    display: grid;
+footer {
     width: 100vw;
-    grid-template-columns: 0 1fr;
+    height: 200px;
 }
