--- a/resources/views/main.edge
+++ b/resources/views/main.edge
@@ -25,6 +25,14 @@
     </div>
 </div>
 <div class="shop-now">
+    <div class="item__frame">
+        <div class="prime__color">
+            <img src="" alt="">
+            <p>Name</p>
+            <p>Price</p>
+        </div>
+        <div class="sec__color"></div>
+    </div>
     <button type="button">
         GO SHOPPING NOW
     </button>
