--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,11 @@
+*,
+*::after,
+*::before
+{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 .color {
     display: grid;
@@ -70,9 +78,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .shop-now {
     display: flex;
+    height: 80vh;
+    position: relative;
 }
 .firstpic {
     background-image: url('../images/home-firstpic.jpg');
@@ -103,4 +117,53 @@
 .text-first p {
     margin: 0;
     padding: 0;
+}
+
+.item__frame
+{
+    background-color: grey;
+    border-radius: 20px;
+    min-width: 260px;
+    height: 300px;
+    position: absolute;
+    display: grid;
+    grid-template-rows: 75% 25%;        
+    top: 20%;
+    left: 20%;
+}
+
+.item__frame img {
+    position: absolute;
+    top: 20%;
+    left: -20%;
+    width: 100px;
+    height: 100px;
+    background-color: red;
+}
+
+.prime__color
+{
+    height: 100%;
+    width: 100%;
+    background-color:#dd4;
+    margin-top: 0;
+    border-radius: 20px 20px 0 0;
+    grid-row: 1;
+    position: relative;
+}
+
+.prime__color p
+{
+    color: #fff;
+    text-align: right;
+    margin: 1em;
+}
+
+.sec__color
+{
+    height: 100%;
+    width: 100%;
+    background-color: #1d5;
+    border-radius: 0 0 20px 20px;
+    grid-row: 2;
 }
