"edit class-name"

--- a/resources/views/shop.edge
+++ b/resources/views/shop.edge
@@ -1,22 +1,41 @@
+@layout('mainlayout')
+@section('css')
+{{style('css/shop')}}
+@endsection
+@section('content')
 <div class="sidebar">
     <div class="all-sidebar-text">
         <div class="sidebar-text">
-            HOME
+            CUSTOME
         </div>
         <div class="sidebar-text">
-            SHOP
+            ACCESSORIE
         </div>
         <div class="sidebar-text">
             MY PURCHASE
         </div>
         <div class="sidebar-text">
-            MY PRODUCTS
+            CASE
         </div>
         <div class="sidebar-text">
-            ABOUT US
+            BAG
         </div>
         <div class="sidebar-text">
-            HELP CENTRE
+            TOY
+        </div>
+        <div class="sidebar-text">
+            IT Device
         </div>
     </div>
 </div>
+<div class="all-card">
+    <div class="card">
+        <img src="images/categories-makeup.jpg" alt="">
+        <div class="inside">
+            <p>Orange lipstick</p>
+            <p style="color:#9B3303;">99.99 THB</p>
+        </div>
+    </div>
+</div>
+
+@endsection
