--- a/public/css/login-register.css
+++ b/public/css/login-register.css
@@ -1,26 +1,13 @@
-.login {
-    width: 550px;
-    height: 500px;
-    background-color: white;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    flex-direction: column;
-    box-shadow: 2px 2px 10px #d8d3ca;
-    font-family: Helvetica Neue;
-    font-weight: 600;
-    font-size: small;
-    color: #676767;
-    letter-spacing: 1px;
-}
 .bodycontent {
     height: 100vh;
     display:flex;
     align-items:center;
     justify-content:center;
-}
-form {
-    width: 60%;
+    font-family: Helvetica Neue;
+    font-weight: 600;
+    font-size: small;
+    color: #676767;
+    letter-spacing: 1px;
 }
 .inputbox {
     width: 100%;
@@ -34,6 +21,33 @@ form {
     cursor: auto;
     transition: transform ease 300ms;
 }
+form {
+    width: 60%;
+}
+.inputbox input:focus ~ label{
+    transform: translateY(-180%);
+    transition: transform ease 300ms;
+}
+.login-whenlogin {
+    width: 550px;
+    height: 500px;
+    background-color: white;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction: column;
+    box-shadow: 2px 2px 10px #d8d3ca;
+}
+.register-whenregister {
+    width: 550px;
+    height: 500px;
+    background-color: white;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction: column;
+    box-shadow: 2px 2px 10px #d8d3ca;
+}
 .login input {
     width: 100%;
     height: 2rem;
@@ -42,11 +56,15 @@ form {
     border-bottom: 2px #FDDFA3 solid;
     outline: none;
 }
-.inputbox input:focus ~ label{
-    transform: translateY(-180%);
-    transition: transform ease 300ms;
+.register input {
+    width: 100%;
+    height: 2rem;
+    padding: 3px 10px;
+    border:none;
+    border-bottom: 2px #FDDFA3 solid;
+    outline: none;
 }
-.login button {
+.login-whenregister button {
     background-color: white;
     border: #FDDFA3 solid 3px;
     color: #FDDFA3;
@@ -56,12 +74,7 @@ form {
     padding: 6px 26px;
     margin-top: 30px;
 }
-.register {
-    display: flex;
-    align-items:center;
-    justify-content:center;
-}
-.register button {
+.login-whenlogin button {
     background-color: #FDDFA3;
     border: white solid 3px;
     color: white;
@@ -71,13 +84,51 @@ form {
     padding: 6px 26px;
     margin-top: 30px;
 }
-.register {
+.register-whenlogin button {
+    background-color: white;
+    border: #FDDFA3 solid 3px;
+    color: #FDDFA3;
+    font-family: Helvetica Neue;
+    font-weight: bolder;
+    border-radius: 20px;
+    padding: 6px 26px;
+    margin-top: 30px;
+}
+.register-whenregister button {
+    background-color: #FDDFA3;
+    border: white solid 3px;
+    color: white;
+    font-family: Helvetica Neue;
+    font-weight: bolder;
+    border-radius: 20px;
+    padding: 6px 26px;
+    margin-top: 30px;
+}
+.login-whenregister {
     width: 200px;
     background-color: #FDDFA3;
     height: 500px;
     box-shadow: 2px 2px 10px #d8d3ca;
 }
+.register-whenlogin {
+    width: 200px;
+    background-color: #FDDFA3;
+    height: 500px;
+    box-shadow: 2px 2px 10px #d8d3ca;
+}
+.register {
+    display: flex;
+    align-items:center;
+    justify-content:center;
+}
+.login {
+    display: flex;
+    align-items:center;
+    justify-content:center;
+}
 footer{
     background-color: #FDDFA3;
-
+}
+.none {
+    display: none;
 }
