--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -4,8 +4,6 @@
     height: 100vh;
     position: fixed;
     z-index: 888;
-    grid-column: 1;
-    transform: translateX(-300px);
 }
 .sidebar-text {
     color: #767676;
@@ -23,4 +21,18 @@
     align-items: center;
     justify-content: center;
     height: 100% ;
-} 
+}
+.all-card {
+    margin-left: 300px;
+}
+.card {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width: 200px; 
+.card img {
+    border-radius: 10px 10px 0 0;
+}
+.inside {
+    padding: 0px 10px 5px 10px;
+}
