--- a/resources/views/login-register.edge
+++ b/resources/views/login-register.edge
@@ -4,23 +4,47 @@
 @endsection
 @section('content')
 <div class="bodycontent">
-    <div class="login">
-        <form action="" method="get">
+    <div class="login login-whenlogin">
+        <form class="" action="" method="get">
             <div class="inputbox">
-                <input type="text" name="username" id="username">
-                <label for="username">USERNAME</label>
+                <input type="text" name="login-username" id="login-username">
+                <label for="login-username">USERNAME</label>
             </div>
             <div class="inputbox">
-                <input type="text" name="password" id="password">
-                <label for="password">PASSWORD</label>
+                <input type="text" name="login-password" id="login-password">
+                <label for="login-password">PASSWORD</label>
             </div>
             <button type="submit" value="submit ">
                 LOG IN
             </button>
         </form>
+        <button class="none" type="button">
+            LOG IN
+        </button>
     </div>
-    <div class="register">
-        <button type="button">
+    <div class="register register-whenlogin">
+        <form class="none" action="" method="get">
+            <div class="inputbox">
+                <input type="text" name="register-name" id="register-name">
+                <label for="register-name">NAME</label>
+            </div>
+            <div class="inputbox">
+                <input type="text" name="ergister-username" id="register-username">
+                <label for="register-username">USERNAME</label>
+            </div>
+            <div class="inputbox">
+                <input type="password" name="register-password" id="register-password">
+                <label for="register-password">PASSWORD</label>
+            </div>
+            <div class="inputbox">
+                <input type="password" name="register-confirm-password" id="register-confirm-password ">
+                <label for="register-confirm-password">CONFIRM PASSWORD</label>
+            </div>
+            <button type="submit" value="submit ">
+                REGISTER
+            </button>
+        </form>
+        <button class="" type="button">
             REGISTER
         </button>
     </div>
