--- a/public/css/home.css
+++ b/public/css/home.css
@@ -79,7 +79,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 75%;
+    top: 85%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -87,6 +87,8 @@
     display: flex;
     height: 80vh;
     position: relative;
+    justify-content: center;
+    align-items: center;
 }
 .firstpic {
     background-image: url('../images/home-firstpic.jpg');
@@ -95,15 +97,15 @@
     background-size: cover;
 }
 .first{
-    font-family: Subway;
+    font-family: 'Subway-Black';
     font-size: large;
 }
 .second {
-    font-family: Subway;
+    font-family: 'Subway-Black';
     font-size: xx-large;
 }
 .third {
-    font-family: Subway shadow;
+    font-family: 'Subway-Shadow';
     font-size: xxx-large;
     letter-spacing: 2px;
 }
@@ -125,27 +127,32 @@
     border-radius: 20px;
     min-width: 260px;
     height: 300px;
-    position: absolute;
+    /* position: absolute; */
     display: grid;
     grid-template-rows: 75% 25%;        
     top: 20%;
     left: 20%;
 }
 
+.item__frame + .item__frame
+{
+    margin-left: 10vw;
+}
+
 .item__frame img {
     position: absolute;
-    top: 20%;
-    left: -20%;
-    width: 100px;
-    height: 100px;
-    background-color: red;
+    top: -10%;
+    left: -25%;
+    width: 200px;
+    /* height: 200px; */
+    /* background-color: red; */
 }
 
 .prime__color
 {
     height: 100%;
     width: 100%;
-    background-color:#dd4;
+    background-color:#e0cdae;
     margin-top: 0;
     border-radius: 20px 20px 0 0;
     grid-row: 1;
@@ -163,7 +170,7 @@
 {
     height: 100%;
     width: 100%;
-    background-color: #1d5;
+    background-color: #ebe2d2;
     border-radius: 0 0 20px 20px;
     grid-row: 2;
 }
