--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -4,3 +4,15 @@ html,body {
     margin:0;
     padding:0;
 }
+
+@font-face
+{
+    font-family: 'Subway-Black';
+    src: url('../fonts/Subway-Black.ttf');
+}
+
+@font-face
+{
+    font-family: 'Subway-Shadow';
+    src: url('../fonts/Subway-Shadow.ttf');
+}
