--- a/resources/views/mainlayout.edge
+++ b/resources/views/mainlayout.edge
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>poprent</title>
     {{style('css/main-css')}}
+    {{style('css/reset')}}
     @!section('css')
 </head>
 <body>
