--- a/resources/views/mainlayout.edge
+++ b/resources/views/mainlayout.edge
@@ -32,7 +32,9 @@
         </div>
     </div>
     {{script("js/index")}}
-</body>
+    <div id="fb-root"></div>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=1012042575911613&autoLogAppEvents=1" nonce="clIVpeU5"></script></body>
 <footer>
 </footer>
 </html>
