Added class to input label for focus effect.

--- a/public/css/login-register.css
+++ b/public/css/login-register.css
@@ -28,6 +28,13 @@ form {
     transform: translateY(-180%);
     transition: transform ease 300ms;
 }
+
+.label__focus
+{
+    transform: translateY(-180%);
+    transition: transform ease 300ms;
+}
+
 .login-whenlogin {
     width: 550px;
     height: 500px;
