Moved index.js to load before optional scripts and removed fixed width on nav-bar icon.

--- a/resources/views/mainlayout.edge
+++ b/resources/views/mainlayout.edge
@@ -23,16 +23,16 @@
                 <div class="icon-navbar">
                     <img src="images/search-bar.svg">
                     <img src="images/account.svg">
-                    <img src="images/shopping-cart.svg" style="width: 20px">
+                    <img src="images/shopping-cart.svg">
                     <img src="images/logout.svg">
                 </div>
             </div>
         </div>
+        {{script("js/index")}}
         <div class="maincontent">
             @!section('content')
         </div>
     </div>
-    {{script("js/index")}}
 </body>
 <footer>
 </footer>
