--- a/public/css/main-css.css
+++ b/public/css/main-css.css
@@ -32,6 +32,7 @@ html,body {
 }
 .all-nav p {
     margin-right: 30px;
+    cursor: pointer;
 }
 .logo img{
     height: 40px;
@@ -53,8 +54,8 @@ html,body {
     margin-right: 20px;
 }
 .icon-navbar img {
-    width: 14px;
     padding-right: 10px;
+    cursor: pointer;
 }
 .maincontent img {
     width: 100%;
@@ -65,5 +66,15 @@ html,body {
 }
 footer {
     width: 100vw;
-    height: 200px;
+    height: 70px;
+    display: flex;
+    background-color: #F1D28C;
+    color: white;
+}
+.copyright {
+    display: flex;
+    width: 100%;
+    font-weight: 500;
+    justify-content: center;
+    align-items: center;
 }
