--- a/resources/views/mainlayout.edge
+++ b/resources/views/mainlayout.edge
@@ -23,7 +23,7 @@
                 <div class="icon-navbar">
                     <img src="images/search-bar.svg">
                     <img src="images/account.svg">
-                    <img src="images/shopping-cart.svg" style="width: 20px">
+                    <img src="images/shopping-cart.svg">
                     <img src="images/logout.svg">
                 </div>
             </div>
@@ -35,7 +35,6 @@
     {{script("js/index")}}
     <div id="fb-root"></div>
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=1012042575911613&autoLogAppEvents=1" nonce="clIVpeU5"></script></body>
-<footer>
-</footer>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=1012042575911613&autoLogAppEvents=1" nonce="clIVpeU5"></script>
+</body>
 </html>
