--- a/public/css/test.css
+++ b/public/css/test.css
@@ -1,85 +1,11 @@
-.login {
-    width: 200px;
-    background-color: #FDDFA3;
-    height: 500px;
-    box-shadow: 2px 2px 10px #d8d3ca;
-}
-.bodycontent {
-    height: 100vh;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-}
-form {
-    width: 60%;
-}
-.inputbox {
-    width: 100%;
-    position: relative;
-    margin-top: 30px;
-}
-.inputbox label {
-    position: absolute;
-    top: 50%;
-    margin-left: 10px;
-    cursor: auto;
-    transition: transform ease 300ms;
-}
-.register input {
-    width: 100%;
-    height: 2rem;
-    padding: 3px 10px;
-    border:none;
-    border-bottom: 2px #FDDFA3 solid;
-    outline: none;
-}
-.inputbox input:focus ~ label{
-    transform: translateY(-180%);
-    transition: transform ease 300ms;
-}
-.register button {
-    background-color: white;
-    border: #FDDFA3 solid 3px;
-    color: #FDDFA3;
-    font-family: Helvetica Neue;
-    font-weight: bolder;
-    border-radius: 20px;
-    padding: 6px 26px;
-    margin-top: 30px;
-}
-.login {
+.test {
+    height: 1000px;
+    color: black;
     display: flex;
-    align-items:center;
-    justify-content:center;
 }
-.login button {
-    background-color: #FDDFA3;
-    border: white solid 3px;
-    color: white;
-    font-family: Helvetica Neue;
-    font-weight: bolder;
-    border-radius: 20px;
-    padding: 6px 26px;
-    margin-top: 30px;
-}
-.register {
-    width: 550px;
-    height: 500px;
-    background-color: white;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    flex-direction: column;
-    box-shadow: 2px 2px 10px #d8d3ca;
-    font-family: Helvetica Neue;
-    font-weight: 600;
-    font-size: small;
-    color: #676767;
-    letter-spacing: 1px;
-}
-footer{
-    background-color: #FDDFA3;
-}
-.none {
-    display: none;
+.test-copyright {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
