--- a/resources/views/checkout.edge
+++ b/resources/views/checkout.edge
@@ -3,7 +3,7 @@
 {{style('css/checkout')}}
 @endsection
 @section('content')
-<div class="first-page none">
+<div class="first-page">
     <div class="first-page-box">
         <div class="first-page-content">
             <div class="timeline">
@@ -105,7 +105,7 @@
         </div>
     </div>
 </div>
-<div class="third-page">
+<div class="third-page none">
     <div class="third-page-box">
         <div class="third-page-content">
             <div class="timeline">
