--- a/resources/views/mainlayout.edge
+++ b/resources/views/mainlayout.edge
@@ -15,15 +15,15 @@
                 <img src="images/logo.svg">
             </div>
             <div class="all-nav">
-                <p>HOME</p>
-                <p>SHOP</p>
+                <p><a href="/">HOME</a></p>
+                <p><a href="shop">SHOP</a></p>
                 <p>PURCHASE</p>
                 <p>PRODUCTS</p>
                 <p>ABOUT US</p>
                 <div class="icon-navbar">
                     <img src="images/search-bar.svg">
-                    <img src="images/account.svg">
-                    <img src="images/shopping-cart.svg">
+                    <a href="login-register"><img src="images/account.svg"></a>
+                    <a href="cart"><img src="images/shopping-cart.svg"></a>
                     <img src="images/logout.svg">
                 </div>
             </div>
